# strongswan

./: .travis.yml  configure.ac
man/: ipsec.conf.5.in
scripts/: test.sh
src/charon-nm/: Makefile.am
src/frontends/gnome/: Makefile.am
src/libcharon/config/: proposal.c
src/libcharon/plugins/kernel_netlink/: kernel_netlink_ipsec.c  kernel_netlink_net.c
src/libcharon/plugins/vici/: vici_config.c
src/libcharon/sa/: ike_sa.c
src/libcharon/sa/ikev2/tasks/: ike_init.c
src/libstrongswan/: Makefile.am
src/libstrongswan/crypto/: diffie_hellman.c  diffie_hellman.h
src/swanctl/: swanctl.opt
